Using @Output() decorator to communicate from child component with parent container component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
 <app-placelist-container></app-placelist-container>
-<app-place-add></app-place-add>
-
+<app-placeadd-container></app-placeadd-container>
