refreshing the places list after a post succeeded

--- a/src/app/places/components/place-add/place-add.component.html
+++ b/src/app/places/components/place-add/place-add.component.html
@@ -1,3 +1,4 @@
+<h2>Proposer un restaurant</h2>
 <div>
   <form (ngSubmit)="savePlace(placeForm)" [formGroup]="placeForm">
     <input type="text"  
