--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
+<app-login-container></app-login-container>
 <app-placeadd-container></app-placeadd-container>
 <app-placelist-container></app-placelist-container>
