allowing user to choose a place where to have lunch

--- a/src/app/places/components/place-list/place-list.component.html
+++ b/src/app/places/components/place-list/place-list.component.html
@@ -4,10 +4,10 @@
 <div *ngIf="places">
   <div *ngFor="let place of places.places">
     <b>{{ place.name }}</b>
+    <br> {{place.street}}
+    <br> {{place.zip}} {{place.town}}
     <br>
-    {{place.street}} 
-    <br>
-    {{place.zip}} {{place.town}}
+    <button (click)="choosePlace(place.id)">choisir</button>
     <hr>
   </div>
 </div>
