--- a/src/app/places/containers/placelist-container/placelist-container.component.html
+++ b/src/app/places/containers/placelist-container/placelist-container.component.html
@@ -1,3 +1,3 @@
 <div>
-  <app-place-list [places]="places$ | async"></app-place-list>
+  <app-place-list [places]="places$ | async" (choose)="addUserchoice($event)"></app-place-list>
 </div>
