showing content depending on user status

--- a/src/app/places/containers/placeadd-container/placeadd-container.component.html
+++ b/src/app/places/containers/placeadd-container/placeadd-container.component.html
@@ -1,1 +1,7 @@
-<app-place-add (create)="createPlace($event)"></app-place-add>
+<div *ngIf="user$ | async as user; else anonymous">
+  <app-place-add (create)="createPlace($event)"></app-place-add>
+</div>
+<ng-template #anonymous>
+    Afin de pouvoir ajouter un restaurant,
+    <b>merci de vous identifier</b>
+  </ng-template>
