--- a/src/app/places/containers/placelist-container/placelist-container.component.html
+++ b/src/app/places/containers/placelist-container/placelist-container.component.html
@@ -7,6 +7,6 @@
 </div>
 
 <ng-template #anonymous>
-  Pour voir les restaurants déjà suggérés et proposer votre suggestion,
+  Afin de voir les restaurants déjà suggérés,
   <b>merci de vous identifier</b>
 </ng-template>
